--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <body>
   <div id="main">
 
-    <nav><ul>
+    <nav><!--<ul>
       {% for node in site.posts reversed %}
         {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
         <li class="p-{{id}}"><a href="#{{id}}">{{node.title}}</a></li>
       {% endfor %}
-    </ul></nav>
+    </ul>--></nav>
 
 
     {% for page in site.posts reversed %}
       {% capture id %}{{ page.id | remove:'/' | downcase }}{% endcapture %}
       <div id="{{id}}" class="section p-{{id}}">
         {% if page.icon %}
-        <div class="subtlecircle sectiondivider imaged">
+        <!--<div class="subtlecircle sectiondivider imaged">
           <img src="{{page.icon}}" alt="section icon" />
           <h5 class="icon-title">{{ page.title }}</h5>
         </div>
@@ -41,7 +41,7 @@
           </span>
           <h5 class="icon-title">{{ page.title }}</h5>
         </div>
-        {% endif %}
+        {% endif %} -->
         <div class="container {{ page.style }}">
           {{ page.content }}
         </div>
