--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     {% for page in site.posts reversed %}
       {% capture id %}{{ page.id | remove:'/' | downcase }}{% endcapture %}
-      <div id="{{id}}" class="section p-{{id}}">
+      <!--<div id="{{id}}" class="section p-{{id}}">
         {% if page.icon %}
-        <!--<div class="subtlecircle sectiondivider imaged">
+        <div class="subtlecircle sectiondivider imaged">
           <img src="{{page.icon}}" alt="section icon" />
           <h5 class="icon-title">{{ page.title }}</h5>
         </div>
